# rv32i_verilog

./: .gitmodules  CMakeLists.txt  simulate.bat  verilate.bat
eval8k/: 8k.pcf  eval8k.v  make.bat  rom_blinky.hex  rom_uart.hex
obj_dir/: Vrv32i_cpu_t.cpp  Vrv32i_cpu_t.h  Vrv32i_cpu_t.mk  Vrv32i_cpu_t__Syms.cpp  Vrv32i_cpu_t__Syms.h  Vrv32i_cpu_t__ver.d  Vrv32i_cpu_t_classes.mk
rtl/: gpio.v  rv32i.v  rv32i_rev2.v  soc.v  spi_ctrl.v  sram.v  testbench.v  uart_rx.v  uart_tx.v
source/: dump.cpp  elf.cpp  elf.h  main.cpp  memory.h  program.h
tests/: common.h  entry.S  link.ld  runtests.py
tests/23lc1024/: main.c
tests/compliance/dis/: I-BEQ-01.txt
tests/gpio/: main.c  out.dasm  out.elf  out.hex
tests/leds/: build.sh  main.c  out.dasm  out.elf  out.hex
tests/sd_card/: main.c
tests/spi/: main.c  out.dasm  out.elf  out.hex
tests/uart/: main.c  out.dasm  out.elf  out.hex
tests/uart_echo/: main.c  out.dasm  out.elf  out.hex
ulx3s/: apio.ini  build.bat  top.v  ulx3s_v20.lpf
